# NEAT-CPP-PY

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  genPYI.sh  makefile  pyproject.toml  setup.py
_test/: main.cpp  profile.sh
_test/handler/: testHandler.cpp  testHandler.hpp
_test_cpp/: foo.cpp  fooWrapper.py
include/NEAT/: Activation.hpp  Edge.hpp  GeneHistory.hpp  Genome.hpp  Helper.hpp  MapVector.hpp  Node.hpp  Population.hpp  Species.hpp  SpeciesHandler.hpp  config.hpp
src/: Edge.cpp  Genome.cpp  Helper.cpp  Mutation.cpp  Node.cpp  Population.cpp  Species.cpp  SpeciesHandler.cpp  _Python_lib.cpp  main.cpp
src/neatcpy/: __init__.py  __init__.pyi  _neatcpy.pyi
